# Huffman_Coding_Implementation

./: README.md
CMakeFolder/: CMakeLists.txt
Header_files/: BitStream.h  Heap_function.h  Node.h  String_builder.h  charMap.h
Implementation/: BitStream.c  Heap_function.c  Node.c  String_builder.c  charMap.c
Main_Folder/: mainFile.c
